--- a/StoreManagement/StoreManagement/Views/Category/WatchProducts.cshtml
+++ b/StoreManagement/StoreManagement/Views/Category/WatchProducts.cshtml
@@ -1,34 +1,33 @@
-﻿@model List<StoreManagement.Models.Entities.Category>
+﻿@model StoreManagement.Models.Entities.Category
 
 @inject StoreDbContext context;
 @{
-    var ProductList = context.Products.ToList();
+    var productList = context.Products.ToList().FindAll(el => el.CategoryId == Model.Id);
 }
 
+<h2>@Model.Name</h2>
 <table id="example" class="table table-striped table-bordered" style="width:100%">
     <thead>
         <tr>
             <th>#id</th>
             <th>Name</th>
+            <th>Price</th>
             <th>Status</th>
-            <th>List Product</th>
         </tr>
     </thead>
 
     <tbody>
-        @foreach (var item in Model)
+
+        @foreach (var item in productList)
         {
             <tr>
                 <td>@item.Id</td>
                 <td>@item.Name</td>
+                <td>@item.Price</td>
                 <td>@item.Status</td>
-                <td>
-                    <a asp-controller="Category" asp-action="WatchProducts" asp-route-id="@item.Id">
-                        @ProductList.FindAll(el=>el.CategoryId==item.Id).Count
-                    </a>
-                </td>
             </tr>
         }
+
     </tbody>
     <tfoot>
     </tfoot>
