--- a/StoreManagement/StoreManagement/Views/Category/Index.cshtml
+++ b/StoreManagement/StoreManagement/Views/Category/Index.cshtml
@@ -5,7 +5,7 @@
     var ProductList = context.Products.ToList();
 }
 
-<link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+<a asp-action="Create" asp-controller="Category">Create</a>
 
 <table id="CategoryIndex" class="table table-striped table-bordered" style="width:100%">
     <thead>
@@ -40,9 +40,5 @@
 </table>
 
 @section Scripts{
-    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-
-    <script src="~/lib/bootbox/bootbox.min.js"></script>
     <script src="~/js/Category.js" asp-append-version="true"></script>
 }
