--- a/StoreManagement/StoreManagement/Views/Category/WatchProducts.cshtml
+++ b/StoreManagement/StoreManagement/Views/Category/WatchProducts.cshtml
@@ -27,7 +27,7 @@
         {
             <tr>
                 <td>@item.Name</td>
-                <td>@item.QuantityPerUnit</td>
+                <td>@item.PricePerUnit</td>
                 <td>@item.CreateAt</td>
                 <td>
                     <img src="~/images/@item.ImagePath" alt="Alternate Text" style="width:50px;height:50px"
