--- a/StoreManagement/StoreManagement/Views/Order/Index.cshtml
+++ b/StoreManagement/StoreManagement/Views/Order/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@model List<StoreManagement.Models.Entities.Order>
+﻿@model List<Order>
 
+@inject StoreDbContext Context;
 @{
+    List<OrderDetail> orderDetails = Context.OrderDetails.ToList();
 }
 
 <table id="OrderIndex" class="table table-striped table-bordered" style="width:100%">
@@ -9,6 +11,7 @@
             <th>Pay Status</th>
             <th>Create At</th>
             <th>Shipper Date</th>
+            <th>Management Items</th>
             <th>Action</th>
         </tr>
     </thead>
@@ -20,6 +23,11 @@
                 <td>@item.PayStatus</td>
                 <td>@item.CreateAt</td>
                 <td>@item.ShipperDate</td>
+                <td>
+                    <a asp-controller="OrderDetail" asp-action="WatchOrderDetail" asp-route-id="@item.Id">
+                        @orderDetails.FindAll(el => el.OrderId == item.Id).Count
+                    </a>
+                </td>
                 <td>
                     <a href="javascript:void(0)" class="text-danger" onclick="Order.delete(@item.Id)">Delete</a>
                     <a asp-controller="Order" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
