--- a/StoreManagement/StoreManagement/Views/_ViewImports.cshtml
+++ b/StoreManagement/StoreManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using StoreManagement
 @using StoreManagement.Models
+@using StoreManagement.Models.Entities
+@using StoreManagement.Enum
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
