--- a/StoreManagement/StoreManagement/Views/_ViewImports.cshtml
+++ b/StoreManagement/StoreManagement/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using StoreManagement.Models
 @using StoreManagement.Models.Entities
 @using StoreManagement.Enum
+@using StoreManagement.Models.ViewModels
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
