--- a/StoreManagement/StoreManagement/Views/Order/Index.cshtml
+++ b/StoreManagement/StoreManagement/Views/Order/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<Order>
 
 @inject StoreDbContext Context;
+@inject UserManager<ApplicationUser> userManager;
 @{
     List<OrderDetail> orderDetails = Context.OrderDetails.ToList();
 }
@@ -8,6 +9,7 @@
 <table id="OrderIndex" class="table table-striped table-bordered" style="width:100%">
     <thead class="thead-dark" style="text-align:center">
         <tr>
+            <th>Người Thanh Toán</th>
             <th>Pay Status</th>
             <th>Ngày tạo</th>
             <th>Ngày giao hàng</th>
@@ -20,6 +22,11 @@
         @foreach (var item in Model)
         {
             <tr style="text-align:center">
+                <td>
+                    @userManager.FindByIdAsync(item.ApplicationUserId).Result.FullName
+                    <img src="~/Images/UserImages/@userManager.FindByIdAsync(item.ApplicationUserId).Result.Avatar"
+                         alt="Alternate Text" style="width:27px;height:27px"/>
+                </td>
                 <td>@item.PayStatus</td>
                 <td>@item.CreateAt</td>
                 <td>@item.ShipperDate</td>
@@ -37,6 +44,7 @@
     </tbody>
     <tfoot style="text-align:center">
         <tr>
+            <th>Người Thanh Toán</th>
             <th>Pay Status</th>
             <th>Ngày tạo</th>
             <th>Ngày giao hàng</th>
