--- a/StoreManagement/StoreManagement/Views/Account/Index.cshtml
+++ b/StoreManagement/StoreManagement/Views/Account/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<ApplicationUser>
 
 @inject StoreDbContext _context;
+@inject SignInManager<ApplicationUser> _signInManager;
 
 @{
     var ProvinceList = _context.Province.ToList();
@@ -8,7 +9,9 @@
     var WardList = _context.Ward.ToList();
     var AddressList = _context.Addresses.ToList();
 }
-
+<a style="float:right;color:forestgreen" asp-controller="Account" asp-action="Create">
+    Tạo Tài Khoản Mới
+</a>
 <table id="IndexAccount" class="table table-striped table-bordered" style="width:100%">
     <thead style="text-align:center" class="thead-dark">
         <tr>
@@ -27,33 +30,36 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.FullName</td>
-                <td>@item.Email</td>
-                <td>@item.PhoneNumber</td>
-                <td>
-                    @ProvinceList.Find(pro => pro.Id == AddressList.Find(add => add.Id == item.AddressId).ProvinceId).Name
-                </td>
-                <td>
-                    @DistrictList.Find(dis => dis.Id == AddressList.Find(add => add.Id == item.AddressId).DistrictId).Name
-                </td>
-                <td>
-                    @WardList.Find(war => war.Id == AddressList.Find(add => add.Id == item.AddressId).WardId).Name
-                </td>
-                <td>
-                    @_context.Addresses.ToList().Find(el => el.Id == item.AddressId).HouseNum
-                </td>
-                <td>
-                    <img src="~/Images/UserImages/@item.Avatar" alt="Alternate Text" style="width:50px;height:50px"
-                         asp-append-version="true" />
-                </td>
-                <td>
-                    <a asp-controller="Account" asp-action="Edit" asp-route-Id="@item.Id" title="Edit">
-                        Edit
-                    </a>
-                    <a href="javascript:void(0)" class="text-danger" onclick="Account.delete('@item.Id')">
-                        Delete
-                    </a>
-                </td>
+                @if (item.Id != _signInManager.UserManager.GetUserAsync(User).Result.Id)
+                {
+                    <td>@item.FullName</td>
+                    <td>@item.Email</td>
+                    <td>@item.PhoneNumber</td>
+                    <td>
+                        @ProvinceList.Find(pro => pro.Id == AddressList.Find(add => add.Id == item.AddressId).ProvinceId).Name
+                    </td>
+                    <td>
+                        @DistrictList.Find(dis => dis.Id == AddressList.Find(add => add.Id == item.AddressId).DistrictId).Name
+                    </td>
+                    <td>
+                        @WardList.Find(war => war.Id == AddressList.Find(add => add.Id == item.AddressId).WardId).Name
+                    </td>
+                    <td>
+                        @_context.Addresses.ToList().Find(el => el.Id == item.AddressId).HouseNum
+                    </td>
+                    <td>
+                        <img src="~/Images/UserImages/@item.Avatar" alt="Alternate Text" style="width:50px;height:50px"
+                             asp-append-version="true" />
+                    </td>
+                    <td>
+                        <a asp-controller="Account" asp-action="Edit" asp-route-Id="@item.Id" title="Edit">
+                            Edit
+                        </a>
+                        <a href="javascript:void(0)" class="text-danger" onclick="Account.delete('@item.Id')">
+                            Delete
+                        </a>
+                    </td>
+                }
             </tr>
         }
     </tbody>
