--- a/StoreManagement/StoreManagement/Views/Account/Login.cshtml
+++ b/StoreManagement/StoreManagement/Views/Account/Login.cshtml
@@ -49,10 +49,9 @@
                 </div>
                 <div class="form-left">
                     <div class="middle">
-                        <h4>Join Us</h4>
-                        <p>Login Your Account</p>
+                        <h4>Đăng Nhập Hệ Thống</h4>
+                        <a asp-controller="Account" asp-action="Create">Đăng Ký</a>
                     </div>
-                    @*asp-route-returnurl="@Model.ReturnUrl*@
                     <form asp-controller="Account" asp-action="Login" method="post" class="signin-form" asp-route-returnurl="@Model.ReturnUrl">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-input">
@@ -61,16 +60,16 @@
                             <span asp-validation-for="Email"></span>
                         </div>
                         <div class="form-input">
-                            <label>Password</label>
+                            <label>Mật Khẩu</label>
                             <input type="password" placeholder="" required asp-for="Password" />
                             <span asp-validation-for="Password"></span>
                         </div>
                         <label class="container">
-                            Remember Account
+                            Lưu Mật Khẩu
                             <input type="checkbox" asp-for="RememberMe">
                             <span class="checkmark"></span>
                         </label>
-                        <button type="submit" class="btn">Login</button>
+                        <button type="submit" class="btn">Đăng Nhập</button>
                     </form>
                     <div class="copy-right text-center">
                         <p>
