--- a/StoreManagement/StoreManagement/Views/OrderDetail/WatchOrderDetail.cshtml
+++ b/StoreManagement/StoreManagement/Views/OrderDetail/WatchOrderDetail.cshtml
@@ -6,7 +6,9 @@
 
     List<Product> products = context.Products.ToList();
 }
-<a asp-controller="OrderDetail" asp-action="Create" asp-route-id="@Model.Id">create</a>
+<a asp-controller="OrderDetail" asp-action="Create" asp-route-id="@Model.Id" style="float:right">
+    Thêm Sản Phẩm Cho Hóa Đơn
+</a>
 <table id="OrderIndex" class="table table-striped table-bordered" style="width:100%">
     <thead class="thead-dark">
         <tr style="text-align:center">
