--- a/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/ClassRoom/Index.cshtml
+++ b/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/ClassRoom/Index.cshtml
@@ -3,18 +3,12 @@
 @inject AppDbContext context;
 
 
-
-<div class="input-group">
-    <input name="rolename" class="form-control w-25">
-    <span class="input-group-btn">
-        <a class="btn btn-info" asp-action="Create" asp-controller="Student">Tạo Học Sinh</a>
-    </span>
-</div>
 <table id="OrderIndex" class="table table-striped table-bordered" style="width:100%">
     <thead class="thead-dark" style="text-align:center">
         <tr>
             <th>Tên Lớp Học</th>
             <th>Số Lượng Học Sinh</th>
+            <th>Thao Tác</th>
         </tr>
     </thead>
 
@@ -26,8 +20,11 @@
                     @item.ClassName
                 </td>
                 <td>
+                    @context.Students.ToList().FindAll(el => el.ClassRoomId == item.Id).Count Học Sinh
+                </td>
+                <td>
                     <a asp-action="WatchStudentsByClassId" asp-controller="ClassRoom" asp-route-id="@item.Id">
-                        @context.Students.ToList().FindAll(el => el.ClassRoomId == item.Id).Count Học Sinh
+                        Xem Danh Sách Học Sinh
                     </a>
                 </td>
             </tr>
@@ -37,6 +34,7 @@
         <tr>
             <th>Tên Lớp Học</th>
             <th>Số Lượng Học Sinh</th>
+            <th>Thao Tác</th>
         </tr>
     </tfoot>
 </table>
