--- a/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/ClassRoom/WatchStudentsByClassId.cshtml
+++ b/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/ClassRoom/WatchStudentsByClassId.cshtml
@@ -1,5 +1,9 @@
-﻿@model List<Student>
+﻿@model SchoolManagement_ThiModul3.Models.ViewModel.WatchStudentView
+@inject AppDbContext context;
 
+<h2>@context.ClassRooms.FirstOrDefault(el => el.Id == Model.ClassId).ClassName</h2>
+<a class="btn btn-info" asp-action="Create" asp-controller="Student" asp-route-id="@Model.ClassId" 
+   style="float:right">Thêm Học Sinh</a>
 
 <table id="OrderIndex" class="table table-striped table-bordered" style="width:100%">
     <thead class="thead-dark" style="text-align:center">
@@ -13,7 +17,7 @@
     </thead>
 
     <tbody style="text-align:center">
-        @foreach (var item in Model)
+        @foreach (var item in Model.students)
         {
             <tr style="text-align:center">
                 <td>
@@ -29,8 +33,8 @@
                     @item.Email
                 </td>
                 <td>
-                    <a href="javascript:void(0)" class="text-danger" onclick="Student.delete(@item.Id)">Delete</a>
-                    <a asp-controller="Student" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a href="javascript:void(0)" class="text-danger" onclick="Student.delete(@item.Id)">Delete</a>|
+                    <a asp-controller="Student" asp-action="Edit" asp-route-id="@item.Id">Edit</a>|
                     <a asp-controller="Student" asp-action="Detail" asp-route-id="@item.Id">Detail</a>
                 </td>
             </tr>
