--- a/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/Student/Create.cshtml
+++ b/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/Student/Create.cshtml
@@ -1,8 +1,9 @@
-﻿@model Student
+﻿@model SchoolManagement_ThiModul3.Models.ViewModel.CreateStudentView
 @inject AppDbContext context;
 
 <form asp-controller="Student" asp-action="Create" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
+    <input type="hidden" asp-for="ClassRoomId"/>
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Họ Và Tên</label>
         <div class="col-sm-10">
@@ -33,14 +34,6 @@
             <input type="email" class="form-control" asp-for="Email">
         </div>
         <span asp-validation-for="Email"></span>
-    </div>
-    <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Lớp học</label>
-        <div class="col-sm-10">
-            <select class="form-control" asp-for="ClassRoomId"
-                    asp-items="@(new SelectList(context.ClassRooms.ToList(),"Id","ClassName"))">
-            </select>
-        </div>
     </div>
     <button type="submit" class="btn btn-primary mb-2">Tạo Mới</button>
 </form>
