--- a/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/Student/Detail.cshtml
+++ b/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/Student/Detail.cshtml
@@ -11,7 +11,7 @@
     </li>
 
     <li class="list-group-item">
-        Số Điện Thoại:
+        Ngày sinh:
         @Model.DoB.ToShortDateString();
     </li>
     <li class="list-group-item">
