--- a/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/Student/Edit.cshtml
+++ b/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/Student/Edit.cshtml
@@ -31,7 +31,7 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-            <input type="date" class="form-control" asp-for="Email">
+            <input type="text" class="form-control" asp-for="Email">
         </div>
         <span asp-validation-for="Email"></span>
     </div>
