--- a/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/Student/Create.cshtml
+++ b/SchoolManagement_ThiModul3/SchoolManagement_ThiModul3/Views/Student/Create.cshtml
@@ -1,22 +1,20 @@
 ﻿@model SchoolManagement_ThiModul3.Models.ViewModel.CreateStudentView
-@inject AppDbContext context;
 
 <form asp-controller="Student" asp-action="Create" method="post">
-    <div asp-validation-summary="All" class="text-danger"></div>
     <input type="hidden" asp-for="ClassRoomId"/>
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Họ Và Tên</label>
         <div class="col-sm-10">
             <input type="text" class="form-control" asp-for="FullName">
+            <span asp-validation-for="FullName" class="text-danger"></span>
         </div>
-        <span asp-validation-for="FullName"></span>
     </div>
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Ngày Sinh</label>
         <div class="col-sm-10">
             <input type="date" class="form-control" asp-for="DoB">
+            <span asp-validation-for="DoB" class="text-danger"></span>
         </div>
-        <span asp-validation-for="DoB"></span>
     </div>
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Giới tính</label>
@@ -32,8 +30,8 @@
         <label class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
             <input type="email" class="form-control" asp-for="Email">
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <span asp-validation-for="Email"></span>
     </div>
     <button type="submit" class="btn btn-primary mb-2">Tạo Mới</button>
 </form>
